# learn-opencv-python

./: .gitignore  README.md
C_Plus_Plus/: README.md
C_Plus_Plus/Basic/03-setting_pixel_values/: CMakeLists.txt  main.cpp
C_Plus_Plus/Basic/04-create_empyt_image/: CMakeLists.txt
C_Plus_Plus/Basic/05-change_color_space/: CMakeLists.txt  main.cpp
C_Plus_Plus/Basic/06-corpping_region/: CMakeLists.txt  main.cpp
C_Plus_Plus/Basic/Read_image/: CMakeLists.txt  main.cpp
C_Plus_Plus/Basic/create_empyt_image/: CMakeLists.txt  main.cpp
C_Plus_Plus/Basic/get_pixel_values/: CMakeLists.txt  main.cpp
C_Plus_Plus/Basic/save_image/: CMakeLists.txt  main.cpp
C_Plus_Plus/Video-Analysis/01-Capture_from_camera/: CMakeLists.txt  main.cpp
C_Plus_Plus/essential_medthods/01-Gassuain_blur/: CMakeLists.txt  main.cpp
C_Plus_Plus/essential_medthods/02-Blur/: CMakeLists.txt  main.cpp
C_Plus_Plus/essential_medthods/03-Bluring_Region/: CMakeLists.txt  main.cpp
C_Plus_Plus/essential_medthods/04-Edges_Detection/: CMakeLists.txt  main.cpp
C_Plus_Plus/essential_medthods/05-Resize_image/: CMakeLists.txt  main.cpp
source-code/: Bluring_img.py  Edges_detection.py  accessing_pixel.py  blurring_region.py  change_color_space.py  create_empty_image.py  croping_region.py  gaussain_blur.py  modifying_pixel_values.py  read_image.py  resize_img.py  save_image.py
source-code/Basic stuff/: accessing_pixel.py  change_color_space.py  croping_region.py  modifying_pixel_values.py  read_image.py  save_image.py  test_installation.py
source-code/Draw-Shapes/: 01-circle_draw.py
source-code/Important Methods/: Bluring_img.py  Edges_detection.py  blurring_region.py  gaussain_blur.py  resize_img.py
source-code/Video_Analysis/: 01-reading_camera.py  02-reading_Video_file.py  03-Calculating_FPS.py  04-resize_frame.py
