cmake_minimum_required(VERSION 3.0.0)
project(save_image VERSION 0.1.0)

include(CTest)
enable_testing()
# find_package()
add_executable(save_image main.cpp)
find_package( OpenCV REQUIRED )
find_package(Threads REQUIRED)
include_directories( ${OpenCV_INCLUDE_DIRS} )
target_link_libraries( save_image ${OpenCV_LIBS} )
set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
